chore: uses webstorm ts compiler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
 {
     "compilerOptions": {
+        "module": "CommonJS",
+        "target": "es5",
+        "sourceMap": true,
+        "outDir": "build",
         "esModuleInterop": true,
         "noEmit": true,
-        "esModuleInterop": true
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ],
+    "include": [
+        "src/scripts/**/*"
+    ]
 }
