--- a/package.json
+++ b/package.json
@@ -17,14 +17,27 @@
     "@langchain/groq": "^0.0.13",
     "@langchain/langgraph": "^0.0.25",
     "better-sqlite3": "^9.6.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-standard": "^5.0.0",
     "langchain": "^0.2.7",
     "multiformats": "^9.9.0",
+    "prettier": "^3.3.2",
     "ts-node": "^10.9.2",
-    "tsx": "^4.15.7",
-    "typescript": "^5.5.2"
+    "tsx": "^4.15.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "esbuild": "^0.21.5",
-    "esbuild-plugin-tsc": "^0.4.0"
+    "esbuild-plugin-tsc": "^0.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1"
   }
 }
