--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "langchain": "^0.2.7",
     "multiformats": "^9.9.0",
     "prettier": "^3.3.2",
+    "sget": "^1.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7"
   },
