--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "build",
         "esModuleInterop": true,
         "noEmit": true,
+        "moduleResolution": "node"
     },
     "exclude": [
         "node_modules"
