--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/community": "^0.2.14",
     "@langchain/groq": "^0.0.13",
     "@langchain/langgraph": "^0.0.25",
+    "@langchain/weaviate": "^0.0.4",
     "better-sqlite3": "^9.6.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
@@ -25,9 +26,9 @@
     "langchain": "^0.2.7",
     "multiformats": "^9.9.0",
     "prettier": "^3.3.2",
-    "sget": "^1.0.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.15.7"
+    "tsx": "^4.15.7",
+    "weaviate-ts-client": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
