--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/langgraph": "^0.0.25",
     "@langchain/weaviate": "^0.0.4",
     "better-sqlite3": "^9.6.0",
+    "dotenv": "^16.4.5",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
