--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "langchain": "^0.2.7",
     "multiformats": "^9.9.0",
+    "pdf-parse": "^1.1.1",
     "prettier": "^3.3.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
+    "@langchain/textsplitters": "^0.0.3",
     "@types/eslint__js": "^8.42.3",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
