--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node ./build/build.js",
-    "start": "node ./esBundle/bundle.js"
+    "build:loader": "node ./build/buildLoader.js",
+    "start": "node ./esBundle/bundle.js",
+    "start:loader": "node ./esBundle/documentLoader.js"
+
   },
   "keywords": [],
   "author": "",
