feat: appends env variables for postgres

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@
 WEAVIATE_SCHEME=https
 WEAVIATE_HOST=xxxxx
 WEAVIATE_API_KEY=xxxxx
+DB_NAME=xxxxx
+DB_USERNAME=xxxxx
+DB_PASSWORD=xxxxx
+DB_HOST=xxxxx
